# flask-task-manager

./: .dockerignore  .gitignore  README.md  app.py  config.py  database.db  dockerfile  models.py  pyproject.toml
app/: __init__.py  config.py  forms.py  models.py
app/notes/: routes.py
app/templates/: base.html  edit_note.html  home.html  login.html  note_form.html  register.html
app/users/: routes.py
notes/: routes.py
static/css/: styles.css
templates/: base.html  edit_note.html  home.html  login.html  note_form.html
users/: routes.py
