[project]
name = "flask-task-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Martínez",email = "danieljosuemartinezjarquin3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "gunicorn (>=22.0.0,<23.0.0)",
    "wtforms (>=3.2.2,<4.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
